--- a/Server/Frontend/src/app/home/home.component.html
+++ b/Server/Frontend/src/app/home/home.component.html
@@ -10,6 +10,15 @@
 	</md-card-content>
 </md-card>
 <div class="spacer-hor"></div>
+<md-card>
+	<h2>Ranked battles</h2>
+	<md-card-content>
+		<p>
+			I am aware of the issues with ranked battles. Though i haven't had the time since the start of ranked, i'm working on it this week (10.7.2017) and planning to release and update until the weekend!
+		</p>
+	</md-card-content>
+</md-card>
+<div class="spacer-hor"></div>
 <div class="half-wrapper">
 	<div>
 		<md-card>
