--- a/Client/MainWindow.xaml
+++ b/Client/MainWindow.xaml
@@ -158,26 +158,26 @@
 					<StackPanel Grid.Column="0">
             <StackPanel Orientation="Horizontal">
               <TextBlock FontSize="15" FontWeight="Bold" Foreground="Green">Friendly team</TextBlock>
-              <TextBlock FontSize="15" Margin="10,0,0,0"  Foreground="Green">Avg XP:</TextBlock>
-              <TextBlock FontSize="15" Margin="5,0,0,0" Foreground="Green" Text="{Binding AvgXpFriendly}"></TextBlock>
-              <TextBlock FontSize="15" Margin="10,0,0,0"  Foreground="Green">Avg Winrate:</TextBlock>
-              <TextBlock FontSize="15" Margin="5,0,0,0" Foreground="Green" Text="{Binding AvgWinrateFriendly}"></TextBlock>
-              <TextBlock FontSize="15" Foreground="Green">%</TextBlock>
-              <TextBlock FontSize="15" Margin="10,0,0,0"  Foreground="Green">Avg Battles:</TextBlock>
-              <TextBlock FontSize="15" Margin="5,0,0,0" Foreground="Green" Text="{Binding AvgBattlesFriendly}"></TextBlock>
+              <TextBlock FontSize="15" Margin="10,0,0,0"  Foreground="Black">Avg XP:</TextBlock>
+							<TextBlock FontSize="15" Margin="5,0,0,0" Foreground="Black" Text="{Binding AvgXpFriendly}"></TextBlock>
+							<TextBlock FontSize="15" Margin="10,0,0,0"  Foreground="Black">Avg Winrate:</TextBlock>
+							<TextBlock FontSize="15" Margin="5,0,0,0" Foreground="Black" Text="{Binding AvgWinrateFriendly}"></TextBlock>
+							<TextBlock FontSize="15" Foreground="Black">%</TextBlock>
+							<TextBlock FontSize="15" Margin="10,0,0,0"  Foreground="Black">Avg Battles:</TextBlock>
+							<TextBlock FontSize="15" Margin="5,0,0,0" Foreground="Black" Text="{Binding AvgBattlesFriendly}"></TextBlock>
             </StackPanel>
             <ItemsControl ItemsSource="{Binding FriendlyPlayers}" ItemTemplate="{StaticResource PlayerTemplate}" />
 					</StackPanel>
 					<StackPanel Grid.Column="1">
             <StackPanel Orientation="Horizontal">
               <TextBlock FontSize="15" FontWeight="Bold" Foreground="OrangeRed">Enemy team</TextBlock>
-              <TextBlock FontSize="15" Margin="10,0,0,0"  Foreground="OrangeRed">Avg XP:</TextBlock>
-              <TextBlock FontSize="15" Margin="5,0,0,0" Foreground="OrangeRed" Text="{Binding AvgXpEnemy}"></TextBlock>
-              <TextBlock FontSize="15" Margin="10,0,0,0"  Foreground="OrangeRed">Avg Winrate:</TextBlock>
-              <TextBlock FontSize="15" Margin="5,0,0,0" Foreground="OrangeRed" Text="{Binding AvgWinrateEnemy}"></TextBlock>
-              <TextBlock FontSize="15" Foreground="OrangeRed">%</TextBlock>
-              <TextBlock FontSize="15" Margin="10,0,0,0"  Foreground="OrangeRed">Avg Battles:</TextBlock>
-              <TextBlock FontSize="15" Margin="5,0,0,0" Foreground="OrangeRed" Text="{Binding AvgBattlesEnemy}"></TextBlock>
+							<TextBlock FontSize="15" Margin="10,0,0,0"  Foreground="Black">Avg XP:</TextBlock>
+							<TextBlock FontSize="15" Margin="5,0,0,0" Foreground="Black" Text="{Binding AvgXpEnemy}"></TextBlock>
+							<TextBlock FontSize="15" Margin="10,0,0,0"  Foreground="Black">Avg Winrate:</TextBlock>
+							<TextBlock FontSize="15" Margin="5,0,0,0" Foreground="Black" Text="{Binding AvgWinrateEnemy}"></TextBlock>
+							<TextBlock FontSize="15" Foreground="Black">%</TextBlock>
+							<TextBlock FontSize="15" Margin="10,0,0,0"  Foreground="Black">Avg Battles:</TextBlock>
+							<TextBlock FontSize="15" Margin="5,0,0,0" Foreground="Black" Text="{Binding AvgBattlesEnemy}"></TextBlock>
             </StackPanel>
             <ItemsControl ItemsSource="{Binding EnemyPlayers}" ItemTemplate="{StaticResource PlayerTemplate}" />
 					</StackPanel>
