--- a/Client/QrCodeWindow.xaml
+++ b/Client/QrCodeWindow.xaml
@@ -5,13 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         Title="QrCode" Height="350" Width="350"
-				ResizeMode="NoResize"
+        ResizeMode="NoResize"
         DataContext="{Binding QrCodeViewModel, Source={StaticResource ViewModelLocator}}">
 	<StackPanel Orientation="Vertical">
-		<Image Name="QrCode" Source="{Binding QrCode}" VerticalAlignment="Top" Height="280" Width="280"></Image>
+		<Image Name="QrCode" Source="{Binding QrCode}" VerticalAlignment="Top" Height="280" Width="280" />
 		<!--<TextBox Text="{Binding Token}"></TextBox>-->
 		<StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" HorizontalAlignment="Center">
-			<Button Content="Generate" Command="{Binding GenerateCommand}"></Button>
+			<Button Content="Generate" Command="{Binding GenerateCommand}" />
 		</StackPanel>
 	</StackPanel>
 </Window>
