--- a/Client/SettingsWindow.xaml
+++ b/Client/SettingsWindow.xaml
@@ -68,8 +68,10 @@
 			</StackPanel>
 			<StackPanel Orientation="Vertical" Margin="20, 5, 0, 0">
 				<CheckBox IsChecked="{Binding AutomaticAppUpdate}" Margin="0,0,0,2" Content="Automatically download new version" />
-				<CheckBox IsChecked="{Binding HideLowBattles}" Margin="0,0,0,2" Content="Hide players that have less than 10 battles in the current ship" />
-				<CheckBox IsChecked="{Binding AutomaticLimitsSync}" Margin="0,0,0,2" Content="Synchronize limits from warships.today on app start" />
+				<CheckBox IsChecked="{Binding HideLowBattles}" Margin="0,0,0,2"
+				          Content="Hide players that have less than 10 battles in the current ship" />
+				<CheckBox IsChecked="{Binding AutomaticLimitsSync}" Margin="0,0,0,2"
+				          Content="Synchronize limits from warships.today on app start" />
 			</StackPanel>
 
 		</StackPanel>
@@ -119,7 +121,7 @@
 			<TextBlock Grid.Column="8" Grid.Row="0" FontSize="11" HorizontalAlignment="Center" Text="Bad" />
 			<TextBlock Grid.Column="9" Grid.Row="0" FontSize="11" HorizontalAlignment="Center" Text="Very bad" />
 
-			<TextBlock Grid.Column="0" FontSize="10" FontWeight="Bold" Text="Colors" VerticalAlignment="Center" />
+			<TextBlock Grid.Column="0" Grid.Row="0" FontSize="10" FontWeight="Bold" Text="Colors" VerticalAlignment="Center" />
 			<xctk:ColorPicker Grid.Column="1" Grid.Row="1" Margin="5" SelectedColor="{Binding ColorsViewModel.Color1}" />
 			<xctk:ColorPicker Grid.Column="2" Grid.Row="1" Margin="5" SelectedColor="{Binding ColorsViewModel.Color2}" />
 			<xctk:ColorPicker Grid.Column="3" Grid.Row="1" Margin="5" SelectedColor="{Binding ColorsViewModel.Color3}" />
