--- a/Client/UpdateWindow.xaml
+++ b/Client/UpdateWindow.xaml
@@ -3,11 +3,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MatchmakingMonitor"
         mc:Ignorable="d"
-        Title="Updating..." Height="100" Width="300" ResizeMode="NoResize" WindowState="Normal" WindowStartupLocation="CenterScreen">
+        Title="Updating..." Height="100" Width="300" ResizeMode="NoResize" WindowState="Normal"
+        WindowStartupLocation="CenterScreen">
 	<StackPanel Orientation="Vertical" Margin="10">
-		<ProgressBar VerticalAlignment="Center" Height="20" Name="ProgressBar" Value="50"></ProgressBar>
-		<TextBlock VerticalAlignment="Center" Name="ProgressText" HorizontalAlignment="Right" Text="0 / 100"></TextBlock>
+		<ProgressBar VerticalAlignment="Center" Height="20" Name="ProgressBar" Value="50" />
+		<TextBlock VerticalAlignment="Center" Name="ProgressText" HorizontalAlignment="Right" Text="0 / 100" />
 	</StackPanel>
 </Window>
