--- a/Client/SettingsWindow.xaml
+++ b/Client/SettingsWindow.xaml
@@ -67,7 +67,7 @@
 				          SelectedValue="{Binding FontSize}" />
 			</StackPanel>
 			<StackPanel Orientation="Vertical" Margin="20, 5, 0, 0">
-				<CheckBox IsChecked="{Binding AutomaticAppUpdate}" Margin="0,0,0,2" Content="Automatically download new version" />
+				<!--<CheckBox IsChecked="{Binding AutomaticAppUpdate}" Margin="0,0,0,2" Content="Automatically download new version" />-->
 				<CheckBox IsChecked="{Binding HideLowBattles}" Margin="0,0,0,2"
 				          Content="Hide players that have less than 10 battles in the current ship" />
 				<CheckBox IsChecked="{Binding AutomaticLimitsSync}" Margin="0,0,0,2"
