--- a/Client/App.xaml
+++ b/Client/App.xaml
@@ -1,11 +1,11 @@
-﻿<Application x:Class="MatchMakingMonitor.App"
+﻿<Application x:Class="MatchmakingMonitor.App"
              x:Name="App"
              ShutdownMode="OnMainWindowClose"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:util="clr-namespace:MatchMakingMonitor.View.Util"
+             xmlns:util="clr-namespace:MatchmakingMonitor.View.Util"
              mc:Ignorable="d">
   <Application.Resources>
     <ResourceDictionary>
