--- a/Client/MainWindow.xaml
+++ b/Client/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Name="MatchmakingMonitor" x:Class="MatchMakingMonitor.MainWindow"
+﻿<Window x:Name="MatchmakingMonitor" x:Class="MatchmakingMonitor.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:models="clr-namespace:MatchMakingMonitor.Models"
+        xmlns:models="clr-namespace:MatchmakingMonitor.Models"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        xmlns:view="clr-namespace:MatchMakingMonitor.View"
+        xmlns:view="clr-namespace:MatchmakingMonitor.View"
         mc:Ignorable="d"
         Title="Matchmaking Monitor"
         WindowStartupLocation="Manual"
@@ -135,7 +135,7 @@
                         <StackPanel Grid.Column="2" Orientation="Vertical" Visibility="{Binding Visibility}">
                           <TextBlock Margin="5" Text="{Binding TextWins}" Foreground="{DynamicResource MaterialDesignBody}"
                                    FontSize="{Binding FontSize}" />
-                          <TextBlock Margin="5" FontWeight="Bold" Foreground="{Binding ColorWinRate}" Text="{Binding TextWinRate}"
+                          <TextBlock Margin="5" Foreground="{Binding ColorWinRate}" Text="{Binding TextWinRate}"
                                    FontSize="{Binding FontSize}" />
                         </StackPanel>
                         <StackPanel Grid.Column="3" Orientation="Vertical" Visibility="{Binding Visibility}">
