--- a/Client/SettingsWindow.xaml
+++ b/Client/SettingsWindow.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Name="WinSettings" x:Class="MatchMakingMonitor.SettingsWindow"
+﻿<Window x:Name="WinSettings" x:Class="MatchmakingMonitor.SettingsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-        xmlns:settings="clr-namespace:MatchMakingMonitor.View.Settings"
+        xmlns:settings="clr-namespace:MatchmakingMonitor.View.Settings"
         mc:Ignorable="d"
         Icon="Images/favicon.ico"
         Title="UI Settings" MinHeight="800" MinWidth="700" Height="800" Width="800"
