--- a/Server/Frontend/src/app/app.component.html
+++ b/Server/Frontend/src/app/app.component.html
@@ -1,8 +1,8 @@
-<md-toolbar color="primary">
+<mat-toolbar color="primary">
   <a class="unstyled" routerLink="/">Matchmaking Monitor</a>
   <span class="app-toolbar-filler"></span>
-  <a md-button routerLink="download/latest"><i class="material-icons">file_download</i> Download latest ({{api.latestVersion}})</a>
-</md-toolbar>
+  <a mat-button routerLink="download/latest"><i class="material-icons">file_download</i> Download latest ({{api.latestVersion}})</a>
+</mat-toolbar>
 <div class="app-inner">
   <router-outlet></router-outlet>
 </div>
