--- a/Server/Frontend/src/app/app.component.html
+++ b/Server/Frontend/src/app/app.component.html
@@ -1,6 +1,7 @@
 <mat-toolbar color="primary">
   <a class="unstyled" routerLink="/">Matchmaking Monitor</a>
   <span class="app-toolbar-filler"></span>
+  <a mat-button routerLink="/privacy">Privacy</a>
   <a mat-button routerLink="download/latest"><i class="material-icons">file_download</i> Download latest ({{api.latestVersion}})</a>
 </mat-toolbar>
 <div class="app-inner">
