--- a/Server/Frontend/src/app/home/home.component.html
+++ b/Server/Frontend/src/app/home/home.component.html
@@ -19,7 +19,7 @@
         <p>
           Please submit bug and feature reports only for the latest version available
         </p>
-        <form [formGroup]="form" (ngSubmit)="submit(form.value)" *ngIf="!formSend">
+      n  <!--<form [formGroup]="form" (ngSubmit)="submit(form.value)" *ngIf="!formSend">
           <div class="row">
             <mat-radio-group formControlName="mode">
               <mat-radio-button value="0">Bug</mat-radio-button>
@@ -50,7 +50,7 @@
         </form>
         <p *ngIf="formSend" class="centered">
           Thank you for your feedback!
-        </p>
+        </p>-->
       </mat-card-content>
     </mat-card>
   </div>
