Added Info text for broken version

--- a/Server/Frontend/src/app/home/home.component.html
+++ b/Server/Frontend/src/app/home/home.component.html
@@ -3,7 +3,18 @@
   <mat-card-content>
     <p>
       This is just a small website to provide the downloads and some information about the app.
-     </p>
+    </p>
+    <p>
+      <strong>
+        Since update 0.9.0.0 this app will not work anymore. Wargaming has removed something that it required to run.
+        <br />
+        However i am currently working on a new version that is almost ready. At the moment you can only get in on the discord in the #new-version-testing channel.
+        <br />
+        Once the new version is final this website will redirect to the new one.
+        <br />
+        Sorry for the inconvenience.
+      </strong>
+    </p>
     <button mat-raised-button routerLink="/download" color="accent">Downloads / Changelogs</button>
   </mat-card-content>
 </mat-card>
@@ -19,7 +30,8 @@
         <p>
           Please submit bug and feature reports only for the latest version available
         </p>
-      n  <!--<form [formGroup]="form" (ngSubmit)="submit(form.value)" *ngIf="!formSend">
+        n
+        <!--<form [formGroup]="form" (ngSubmit)="submit(form.value)" *ngIf="!formSend">
           <div class="row">
             <mat-radio-group formControlName="mode">
               <mat-radio-button value="0">Bug</mat-radio-button>
@@ -56,7 +68,7 @@
   </div>
   <div>
     <mat-card>
-      <h2>Discord</h2>
+      <h2>h2Discord/h</h2>
       <mat-card-content>
         <p>
           If you need extended support or just want to chat about the application, join the <a href="https://discord.gg/Tds7WBs">discord server</a>.
